--- a/app/src/main/assets/mfpclient.properties
+++ b/app/src/main/assets/mfpclient.properties
@@ -1,5 +1,5 @@
 wlServerProtocol=http
-wlServerHost=9.148.225.87
+wlServerHost=localhost
 wlServerPort=9080
 wlServerContext=/mfp/
 languagePreferences=en
