--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@ limitations under the License.
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.sample.preemptiveloginandroid.MyApplication">
+        android:name=".PreemptiveLoginApplication">
         <activity android:name="com.worklight.wlclient.ui.UIActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
